# rusty_pomo

./: Cargo.toml  README.md
assets/: rusty_pomo.icns
docs/: macos-notifications.md
src/: args.rs  main.rs  notifications.rs  run.rs  state.rs  theme.rs  ui.rs
