[package]
name = "rusty_pomo"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
notify-rust = "4.11"

[package.metadata.bundle]
name = "Rusty Pomo"
identifier = "dev.jorbush.rusty-pomo"
icon = ["docs/assets/rusty_pomo.icns"]
